# asr-api-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
asr_api/: dictation.py  v1.py  v1p1.py
proto/techmo/api/: status.proto
proto/techmo/asr/api/dictation/: asr.proto
proto/techmo/asr/api/v1/: asr.proto
proto/techmo/asr/api/v1p1/: asr.proto
