[build-system]
requires = ["grpcio-tools>=1.49.4,<1.63", "setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "techmo-asr-api"
description = "Techmo ASR API (public)"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Techmo sp. z o.o", email = "kontakt@techmo.pl" }]
requires-python = ">=3.8"
dependencies = ["grpcio>=1.49.4,<1.63", "protobuf>=4.21.3,<5"]

[project.urls]
repository = "https://github.com/techmo-pl/asr-api-python"

[tool.setuptools.dynamic]
version = { attr = "asr_api.VERSION.__version__" }

[tool.setuptools.packages.find]
include = ["asr_api*", "google*", "techmo*"]
